Eclipse configuration.